#pragma once

namespace octomap_tools {

class GlobalAlignment {
public:
  enum class Method { FeatureMatching, NDT };

};

}