@startuml

class FeatureCloud {
  ExtractKeypoints()
  ComputeDescriptors()
}

class FeatureMatching {
  Align()
}

class ICP {
  Align()
}

class NDT {
  Align()
}

class AlignmentMethod {
  Align()
}

class GlobalAlignment {
  Align()
  DivideFullModelIntoBlocks()
  FindBestAlignment()
}

class LocalAlignment {
  Align()
}

class TransformationEstimator {
  EstimateTransformation()
}

class MapsIntegrator {
  Merge()
  EstimateTransformation()
}

class 3DMapsVisualizer {
	Visualize()
}

' Connections

MapServerNode *-- MapServer

MapServer -.> MapsIntegrator
MapServer *-- Graph

Graph o-- Pose
Graph o-- Map

MapsIntegrator --> TransformationEstimator
MapsIntegrator o-- 3DMapsVisualizer

TransformationEstimator --> GlobalAlignment
TransformationEstimator --> LocalAlignment

AlignmentMethod <|-- GlobalAlignment
AlignmentMethod <|-- LocalAlignment

LocalAlignment <|-- ICP
LocalAlignment <|-- NDT

GlobalAlignment <|-- FeatureMatching

FeatureMatching <|-- GeometryClustering
FeatureMatching <|-- KdTreeSVD
FeatureMatching <|-- SampleConsensus
FeatureMatching --> FeatureCloud

FeatureCloud o-- PointCloud

Map o-- Octomap
Map o-- PointCloud

@enduml